# portfolio-lab

./: .env.example  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/ohlcv/: AGG.parquet  DBC.parquet  EEM.parquet  EFA.parquet  GLD.parquet  HYG.parquet  IEF.parquet  LQD.parquet  SHY.parquet  SPY.parquet  TLT.parquet  VNQ.parquet  XLB.parquet  XLE.parquet  XLF.parquet  XLI.parquet  XLK.parquet  XLP.parquet  XLU.parquet  XLV.parquet  XLY.parquet
portlab/: __init__.py  config.py  construction.py  data.py  engine.py  estimation.py  preprocessing.py  signals.py  universe.py
tests/: test_accounting.py  test_config.py  test_construction.py  test_data.py  test_engine.py  test_estimation.py  test_preprocessing.py  test_signals.py  test_smoke.py  test_universe.py
